--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<mat-spinner *ngIf="authService.currentUid == undefined"></mat-spinner>
+<mat-spinner *ngIf="authService.currentUid == undefined && authService.isLoggedIn"></mat-spinner>
 <app-main-nav *ngIf="authService.isLoggedIn"></app-main-nav>
-<app-landing-page *ngIf="!this.authService.isLoggedIn"></app-landing-page>
+<app-landing-page *ngIf="!authService.isLoggedIn"></app-landing-page>
