--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -1,61 +1,78 @@
 @use "src/assets/styles/globalVars";
 
-.landing {
-    &-left {
-        //background: url(src/assets/images/landing2.jpg);
-        width: 50%;
-        position: absolute;
-        left: 0;
-        height: 100%;
-    }
+.logo {
+    width: 120px;
+    z-index: 10;
+    position: absolute;
+    left: 50px;
+    top: 30px;
+    border-radius: 50%;
+}
 
-    &-right {
-        height: 100%;
-        //background: #1C1F23;
-        img {
-            margin: 30px 0 0 30px;
+.landing {
+    &-wrapper {
+        background: url("../../../assets/images/landing2.jpg") center center no-repeat;
+        height: 100vh;
+        background-size: cover;
+        position: relative;
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            background-color: #000;
+            opacity: 0.5;
+            width: 100%;
+            height: 100%;
         }
     }
 
-    &-right-absolute {
-        width: 50%;
+    &-content {
+        padding: 30px;
         position: absolute;
-        right: 0;
+        width: 100%;
         height: 100%;
-    }
 
-    &-btn-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        .welcome-messages-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 30px 0;
+            color: globalVars.$white;
+        }
 
-        button {
-            width: 70%;
-            //background: rgb(29, 161, 242);
-            background: globalVars.$primary-color;
-            //border: 1px solid rgba(0, 0, 0, 0);
+        .bold {
+            color: globalVars.$primary-color;
+        }
+
+        .welcome-message {
+            margin-bottom: 12rem;
+            font-size: 58px;
+        }
+
+        .buttons-message {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            font-size: 34px;
+        }
+
+        .landing-btn {
+            width: 100%;
+            max-width: 200px;
+            background: globalVars.$secondary-color;
             border-radius: 35px;
             color: globalVars.$white;
             font-weight: bold;
             min-height: 48px;
-            font-size: 15px;
-            max-width: 300px;
+            font-size: 20px;
+            margin-right: 1rem;
 
             &:last-child {
-                background: globalVars.$secondary-color;
-                margin-top: 30px;
+                background: globalVars.$primary-color;
+                margin-left: 1rem;
             }
         }
-
-        p {
-            margin: 10px;
-        }
     }
-}
-
-.welcome-messages-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px 0;
 }
