--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -3,7 +3,7 @@
     <div class="landing-content">
         <div class="welcome-messages-wrapper">
             <div class="welcome-message">
-                Welcome to <span class="bold">SocialUni</span>
+                Welcome to <span class="app-name">SocialUni</span>
             </div>
             <div class="buttons-message">
                 <button class="landing-btn" type="button" mat-raised-button color="accent"
