--- a/src/app/components/auth-dialog/auth-dialog.component.scss
+++ b/src/app/components/auth-dialog/auth-dialog.component.scss
@@ -11,22 +11,25 @@
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
+    flex-direction: column;
 
     mat-form-field {
-        width: 100% !important;
+        width: 80% !important;
+        margin-right: 1em;
     }
 
-    .left-side, .right-side {
-        display: inline-flex;
-        flex-direction: column;
+    .checkboxes-container {
+        display: flex;
+        justify-content: space-around;
     }
 
-    .left-side {
-        width: 47%;
+    .policy {
+        color: globalVars.$primary-color;
+        font-weight: bold;
     }
 
-    .right-side {
-        width: 50%;
+    .row {
+        display: flex;
     }
 }
 
@@ -35,18 +38,17 @@
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
-    margin-bottom: 50px;
+    //margin-bottom: 50px;
 
     mat-form-field {
-        width: 60%;
+        width: 80%;
     }
 }
 
 .mat-dialog-actions {
     .login-btn, .signup-btn {
         width: 70%;
-        background: globalVars.$primary-color;
-        //border: 1px solid rgba(0, 0, 0, 0);
+        background: globalVars.$secondary-color;
         border-radius: 35px;
         color: globalVars.$white;
         font-weight: bold;
@@ -56,7 +58,7 @@
     }
 
     .signup-btn {
-        background: globalVars.$secondary-color;
+        background: globalVars.$primary-color;
     }
 }
 
