create notifications page + notification toast

--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -36,4 +36,5 @@
     </mat-toolbar>
     <router-outlet></router-outlet>
     <app-search *ngIf="authService.currentUid != undefined"></app-search>
+    <div class="toast-custom-container" toastContainer></div>
 </mat-sidenav-container>
