--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,23 +1,9 @@
 <div class="home">
-<!--    <div class="left">-->
         <app-new-post></app-new-post>
-<!--        <button (click)="requestPermission()">-->
-<!--            Hello this is a chat app. You should let us send you notifications for this reason.-->
-<!--        </button>-->
-
-<!--    <button (click)="listen()">-->
-<!--        listen-->
-<!--    </button>-->
-
-    <div *ngIf="msgService.currentMessage | async as message ">
-        <h1>{{message.notification.title}}</h1>
-        <p>{{message.notification.body}}</p>
-    </div>
-
 
         <div class="post-card-item" *ngFor="let post of latestPosts | async">
             <div class="image-and-details-wrapper space">
-                <div class="image-and-details" (click)="goToUerProfile(post.uid)">
+                <div class="image-and-details" (click)="goToUserProfile(post.uid)">
                     <div class="profile-img-wrapper">
                         <img class="profile-img" [src]="post.userImageURL" alt="Profile Image">
                     </div>
@@ -102,7 +88,7 @@
                 </div>
                 <div class="comment-container" *ngFor="let comment of post.comments">
                     <div class="image-and-details-wrapper">
-                        <div class="image-and-details" (click)="goToUerProfile(comment.uid)">
+                        <div class="image-and-details" (click)="goToUserProfile(comment.uid)">
                             <div class="profile-img-wrapper">
                                 <img class="profile-img" [src]="comment.userImageURL" alt="Profile Image">
                             </div>
@@ -121,9 +107,5 @@
                     </div>
                 </div>
             </div>
-<!--        </div>-->
     </div>
-<!--    <div class="right">-->
-<!--        searchbar here-->
-<!--    </div>-->
 </div>
