--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -155,6 +155,7 @@ body {
 .mat-toolbar-row, .mat-toolbar-single-row {
     height: 70px;
 }
+
 // [End] Material components
 
 // [Start] Profile image in cards
@@ -322,13 +323,13 @@ body {
 .profile-img-wrapper {
     margin-right: 20px;
     display: inline-flex;
+}
 
-    .profile-img {
-        width: 54px;
-        height: 54px;
-        border-radius: 50%;
-        object-fit: cover;
-    }
+.profile-img {
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .image-and-details {
@@ -412,6 +413,7 @@ body {
     top: 30px;
     border-radius: 50%;
 }
+
 //[End] Others
 
 // [Start] Pagination
@@ -518,4 +520,44 @@ body {
     }
 }
 
-// [End] Pagination
+.toast-container {
+    .ngx-toastr {
+        border-radius: 8px;
+        width: 290px;
+        height: 100px;
+        position: relative;
+        background: #3cefc4;
+        padding: 8px 16px;
+        cursor: pointer;
+        margin-bottom: 0.5rem;
+
+        &:hover {
+            box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.15);
+            cursor: pointer;
+        }
+
+        .image-and-details {
+            align-items: center;
+        }
+
+        .profile-img-wrapper {
+            margin-right: 12px;
+        }
+
+        .post-details {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .post-author {
+            display: flex;
+            text-decoration: none;
+        }
+
+        .notification-title {
+            margin-bottom: 9px;
+            font-size: 15px;
+            font-weight: 500;
+        }
+    }
+}
