--- a/src/app/components/view-profile/view-profile.component.scss
+++ b/src/app/components/view-profile/view-profile.component.scss
@@ -1,5 +1,6 @@
 .view-profile {
     height: 100vh;
+    max-width: 770px;
     padding: 30px 60px;
     display: flex;
     flex-direction: column;
