--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -2,7 +2,7 @@
 
 .profile {
     height: 100vh;
-    width: 60vw;
+    max-width: 770px;
     padding: 60px;
     display: grid;
     grid-template-columns: 1fr 0.8fr;
@@ -58,7 +58,7 @@
     &-form {
         display: flex;
         flex-direction: column;
-        width: 70%;
+        width: 90%;
     }
 
     .image-upload {
