--- a/src/app/components/saved-posts/saved-posts.component.html
+++ b/src/app/components/saved-posts/saved-posts.component.html
@@ -1,6 +1,6 @@
 <div class="saved">
     <h2 class="no-saved-posts" *ngIf="savedPostsArray.length == 0">
-        Your saved posts page is empty!
+        Your saved posts page is empty! Add posts here by clicking "Save post"
     </h2>
     <div class="post-card-item" *ngFor="let post of savedPostsArray; let i = index">
         <div class="image-and-details-wrapper space">
