--- a/src/app/components/notifications/notifications.component.scss
+++ b/src/app/components/notifications/notifications.component.scss
@@ -5,6 +5,7 @@
     .user-item {
         width: 580px;
         cursor: pointer;
+        margin-bottom: 0.5rem;
     }
 
     .author-and-comment {
