--- a/src/app/shared/components/reactions-list/reactions-list.component.scss
+++ b/src/app/shared/components/reactions-list/reactions-list.component.scss
@@ -10,7 +10,12 @@
         list-style: none;
         padding: 0;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 0;
+
+        li {
+            margin-right: 1rem;
+        }
     }
 
     .user-item {
