--- a/src/app/components/auth-dialog/auth-dialog.component.html
+++ b/src/app/components/auth-dialog/auth-dialog.component.html
@@ -1,18 +1,18 @@
-<h2 mat-dialog-title>{{ authMode === 'login' ? 'Log in' : 'Sign up' }}</h2>
+<h2 mat-dialog-title>{{ authMode === 'login' ? loginMessage : signupMessage }}</h2>
 <mat-dialog-content class="mat-typography"
                     [ngClass]="{'login-dialog' : authMode === 'login', 'signup-dialog' : authMode === 'signup'}">
     <form class="signup-form" [formGroup]="signupForm" (ngSubmit)="onSignup()" *ngIf="authMode === 'signup'">
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>First name</mat-label>
-                <input matInput placeholder="First name" formControlName="firstName" autocomplete="given-name">
+                <mat-label>{{"firstName" | translate}}</mat-label>
+                <input matInput placeholder='{{"firstName" | translate}}' formControlName="firstName" autocomplete="given-name">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Last name</mat-label>
-                <input matInput placeholder="Last name" formControlName="lastName" autocomplete="family-name">
+                <mat-label>{{"lastName" | translate}}</mat-label>
+                <input matInput placeholder='{{"lastName" | translate}}' formControlName="lastName" autocomplete="family-name">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Date of birth</mat-label>
+                <mat-label>{{"dob" | translate}}</mat-label>
                 <input matInput [max]="today" [matDatepicker]="picker" formControlName="dob" autocomplete="bday">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -20,20 +20,20 @@
         </div>
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>Email address</mat-label>
-                <input matInput placeholder="Email" formControlName="email" type="email" email autocomplete="email">
+                <mat-label>{{"email" | translate}}</mat-label>
+                <input matInput placeholder='{{"email" | translate}}' formControlName="email" type="email" email autocomplete="email">
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password" type="password"
+                <mat-label>{{"pwd" | translate}}</mat-label>
+                <input matInput placeholder='{{"pwd" | translate}}' formControlName="password" type="password"
                        autocomplete="new-password">
             </mat-form-field>
         </div>
         <div class="row">
             <mat-form-field appearance="outline">
-                <mat-label>University</mat-label>
+                <mat-label>{{"university" | translate}}</mat-label>
                 <input type="text"
-                       placeholder="Type to search..."
+                       placeholder='{{"firstName" | translate}}'
                        matInput
                        formControlName="university"
                        [matAutocomplete]="auto"
@@ -45,27 +45,27 @@
                 </mat-autocomplete>
             </mat-form-field>
             <mat-form-field appearance="outline">
-                <mat-label>Access code</mat-label>
+                <mat-label>{{"code" | translate}}</mat-label>
                 <input matInput formControlName="accessCode" type="text" class="access-code"
                        autocomplete="one-time-code">
             </mat-form-field>
         </div>
         <div class="checkboxes-container">
-            <mat-checkbox formControlName="isTeacher">Are you a teacher?</mat-checkbox>
-            <mat-checkbox formControlName="agreedPolicy">I agree to <a class="policy"
+            <mat-checkbox formControlName="isTeacher">{{"areYouATeacher" | translate}}</mat-checkbox>
+            <mat-checkbox formControlName="agreedPolicy">{{"agree" | translate}} <a class="policy"
                                                                        href="https://www.privacypolicies.com/live/42518265-c5de-411e-9e0b-77e9b3408262"
-                                                                       target="_blank">Privacy Policy</a></mat-checkbox>
+                                                                       target="_blank">{{"policy" | translate}}</a></mat-checkbox>
         </div>
     </form>
 
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()" *ngIf="authMode === 'login'" class="login-form">
         <mat-form-field appearance="outline">
-            <mat-label>Email address</mat-label>
-            <input matInput placeholder="Email" formControlName="email" type="email" email autocomplete="email">
+            <mat-label>{{"email" | translate}}</mat-label>
+            <input matInput placeholder='{{"email" | translate}}' formControlName="email" type="email" email autocomplete="email">
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" formControlName="password" type="password"
+            <mat-label>{{"pwd" | translate}}</mat-label>
+            <input matInput placeholder='{{"pwd" | translate}}' formControlName="password" type="password"
                    autocomplete="current-password">
         </mat-form-field>
     </form>
@@ -75,5 +75,5 @@
     <button mat-button
             (click)="authMode === 'login' ? onLogin() : onSignup()"
             [ngClass]="{'login-btn': authMode === 'login', 'signup-btn': authMode === 'signup', 'disabled-btn': !loginForm.valid && !signupForm.valid}"
-            type="submit" mat-raised-button>{{ authMode === 'login' ? 'Log in' : 'Sign up' }}</button>
+            type="submit" mat-raised-button>{{ authMode === 'login' ? loginBtnMessage : signupBtnMessage }}</button>
 </mat-dialog-actions>
