--- a/src/app/components/saved-posts/saved-posts.component.html
+++ b/src/app/components/saved-posts/saved-posts.component.html
@@ -1,9 +1,9 @@
 <div class="saved">
     <h2 *ngIf="savedPostsArray.length == 0; else hasPosts">
-        Your saved posts page is empty! Add posts here by clicking "Save post"
+        {{"emptySaved" | translate}}
     </h2>
     <ng-template #hasPosts>
-        <h2>Your saved posts</h2>
+        <h2>{{"savedPosts" | translate}}</h2>
         <ng-container *ngFor="let post of savedPostsArray; let i = index">
             <div class="post-card-item" *ngIf="post?.userImageURL">
                 <div class="image-and-details-wrapper space">
@@ -13,7 +13,7 @@
                         </div>
                         <div class="post-details">
                             <div class="post-author">{{post.userFirstName}} {{post.userLastName}}
-                                <div class="teacher-badge" *ngIf="post.userIsTeacher">Teacher</div>
+                                <div class="teacher-badge" *ngIf="post.userIsTeacher">{{"teacher" | translate}}</div>
                             </div>
                             <div class="post-datetime">
                                 {{post.created?.toDate() | date: 'dd MMM y, H:mm'}}
@@ -27,11 +27,11 @@
                         <mat-menu #menu="matMenu">
                             <button mat-menu-item (click)="onRemoveSavedPost(post.id, i)">
                                 <mat-icon>bookmark</mat-icon>
-                                <span>Remove from saved</span>
+                                <span>{{"removeSaved" | translate}}</span>
                             </button>
                             <button mat-menu-item (click)="onDeletePost(post.id, i)" *ngIf="post.uid === currentUid">
                                 <mat-icon class="delete-icon">delete</mat-icon>
-                                <span>Delete post</span>
+                                <span>{{"delete" | translate}}</span>
                             </button>
                         </mat-menu>
                     </div>
@@ -61,8 +61,7 @@
                         </div>
                         <button mat-raised-button class="comments-btn" (click)="showHideComments(post)">
                             <mat-icon>comment</mat-icon>
-                            Comments
-                            <!--                        {{post.numberOfComments}} Comments-->
+                            {{"comments" | translate}}
                         </button>
                     </div>
                 </div>
@@ -76,7 +75,7 @@
                         <form [formGroup]="newCommentForm" class="new-post-form full-width"
                               (keyup.enter)="onSubmitComment(post.id)">
                             <mat-form-field class="new-comment-field" appearance="fill">
-                                <mat-label>Say something nice about this post...</mat-label>
+                                <mat-label>{{"saySomething" | translate}}</mat-label>
                                 <textarea cdkTextareaAutosize
                                           cdkAutosizeMinRows="1"
                                           cdkAutosizeMaxRows="30"
@@ -87,7 +86,8 @@
                             </textarea>
                                 <button mat-raised-button
                                         [ngClass]="{'disabled-btn' : !newCommentForm.get('newComment')?.value?.trim().length}"
-                                        class="btn-primary new-comment-btn" (click)="onSubmitComment(post.id)">Reply
+                                        class="btn-primary new-comment-btn"
+                                        (click)="onSubmitComment(post.id)">{{"reply" | translate}}
                                 </button>
                             </mat-form-field>
                         </form>
@@ -98,7 +98,9 @@
                                 <img class="profile-img" [src]="comment.userImageURL" alt="Profile Image">
                             </div>
                             <div class="post-details">
-                                <div class="post-author">{{comment.userFirstName}} {{comment.userLastName}}</div>
+                                <div class="post-author">{{comment.userFirstName}} {{comment.userLastName}}
+                                    <div class="teacher-badge" *ngIf="comment.userIsTeacher">{{"teacher" | translate}}</div>
+                                </div>
                                 <div class="post-datetime">
                                     {{comment.created?.toDate() | date: 'dd MMM y, H:mm'}}
                                 </div>
