--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search">
-    <input type="text" [(ngModel)]="searchInput" (keyup)="onSearch($event)" placeholder="Find someone...">
+    <input type="text" [(ngModel)]="searchInput" (keyup)="onSearch($event)" placeholder='{{"find" | translate}}'>
     <ng-container *ngIf="searchInput">
         <div class="user-item" (click)="goToUserProfile(user.id)" *ngFor="let user of users">
             <div class="image-and-details">
@@ -8,7 +8,7 @@
                 </div>
                 <div class="post-details">
                     <div class="post-author">{{user.lastName}} {{user.firstName}}
-                        <div class="teacher-badge" *ngIf="user.isTeacher">Teacher</div>
+                        <div class="teacher-badge" *ngIf="user.isTeacher">{{"teacher" | translate}}</div>
                     </div>
                 </div>
             </div>
