--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -174,20 +174,24 @@ body {
     min-height: 100px;
     display: flex;
     flex-direction: column;
+
     .image-and-details {
         &-wrapper {
             display: flex;
             margin-bottom: 1rem;
         }
+
         &-wrapper.space {
             justify-content: space-between;
         }
     }
+
     .post {
         &-details {
             display: flex;
             flex-direction: column;
         }
+
         &-author {
             font-size: 15px;
             font-weight: bold;
@@ -195,24 +199,32 @@ body {
             text-transform: capitalize;
             cursor: pointer;
         }
+
         &-datetime {
             font-size: 11px;
         }
+
         &-content {
             display: flex;
             flex-direction: column;
             height: 100%;
+
             &-text {
                 margin-bottom: 1rem;
+                word-break: break-word;
             }
+
             .reactions-comments-wrapper {
                 display: flex;
                 justify-content: space-between;
                 justify-self: flex-end;
+                margin-top: 1rem;
+
                 .reactions-wrapper {
                     display: flex;
                     justify-content: space-between;
                     width: 110px;
+
                     .likes-section, .dislikes-section, .number-of-likes, .number-of-dislikes {
                         display: flex;
                     }
@@ -261,7 +273,6 @@ body {
         }
 
         &-image {
-            margin-bottom: 2em;
             max-width: 100%;
             width: auto;
             height: auto;
