--- a/src/app/components/new-post/new-post.component.scss
+++ b/src/app/components/new-post/new-post.component.scss
@@ -32,11 +32,16 @@
     }
 
     &-img-icon {
-        margin-top: 12px;
+        margin-top: 10px;
+        margin-right: 8px;
         cursor: pointer;
     }
 
-    #img-upload {
+    #img-upload, #file-upload {
+        display: none;
+    }
+
+    ::-webkit-file-upload-button {
         display: none;
     }
 
@@ -73,5 +78,21 @@
         .mat-form-field-wrapper {
             padding-bottom: 0;
         }
+
+        .mat-form-field-flex {
+            padding: 0.60em 1em 0 1.2em;
+        }
+
+        .mat-form-field-appearance-fill .mat-form-field-infix {
+            padding-top: 0.45em;
+        }
+    }
+
+    .file-upload-container, .image-upload-container {
+        display: inline;
+    }
+
+    .no-events {
+        opacity: 0.5;
     }
 }
