--- a/src/app/components/new-post/new-post.component.html
+++ b/src/app/components/new-post/new-post.component.html
@@ -30,7 +30,7 @@
                         </label>
                         <input id="file-upload" type="file" (change)="onFileUpload($event)"
                                formControlName="newPostFile"
-                               accept=".doc,.docx,.pdf,.txt">
+                               accept=".doc,.docx,.pdf,.txt,.zip,.rar">
                     </div>
                 </mat-form-field>
                 <div class="new-post-img-preview-container" *ngIf="postImageURL">
